--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>At Mozilla, we’re a global community of</p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
+      <li>今日は避難訓練</li>
       <li>thinkers</li>
       <li>builders</li>
     </ul>
@@ -22,6 +22,10 @@
 
     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
   <button>Change user</button>
+  <script>
+    console.log("Hello");
+    cinaole.log("Good Bye")
+    </script>
   <script src="scripts/main.js"></script>
   </body>
 </html>
