--- a/kadaiC.html
+++ b/kadaiC.html
@@ -5,6 +5,7 @@
   <title>Digital Clock</title>
 </head>
 <body onload="strClock();">
+  <h2>現在時刻
   <div id="pos"></div>
   <script type="text/javascript">
  
